test/functions/intents/out/out-array-with-type-query-elt.good
out-array-with-type-query-elt.chpl:1: error: type query for out intent formals is not implemented yet
